--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -160,6 +160,16 @@
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
+  "analyser.details.RiskHeader": "3. Risks",
+  "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
+  "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
+  "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
+  "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
+  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
+  "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
+  "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
+  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
