Analyser in main update (#222)
* created api.md for api documentation

* parameters added

* update api.md

* news api.md

* added post request

* no message

* added lists

* historic data

* charts

* Update api.md

details

* more charts

* Update api.md

details

* delete duplicates

* more apis

* rename

* Get all filters added

* update filters

* Cahnging out put

Analyzer Team is Superior!!!

* Changed ISIN with SYMBOL in Documentation

* Update api_analyser.md

* Update api_analyser.md

* Update api_analyser.md

* Update api_analyser.md

* analyser page is created (#83)

* analyser page is created

* unused deleted

* test name changed

* unused deleted

* unused deleted

* tests added

* Feat/analyser api client (#86)

* set up analyser API Client

* created stocks table

* fix linting

* delete some tests

* delete all tests

* mock data added

* delete all tests and snapshots

Co-authored-by: Ece Ata <eceatata@hotmail.com>

* add Filter bars for "Country", "Industry", "Currency"

* Routing completed for details (#93)

* Routing completed for details

* id changed to symbol

* Routing completed for details (#93) (#94)

* Routing completed for details

* id changed to symbol

Co-authored-by: Ece Ata <eceatata@hotmail.com>

* bug fix already reviewed

* update file structure

* change Filter into Dashboard

* put filter into a Toolbar

* add 'Filter' button.
set initial state as nothing selected

* add Placeholder for each bar

* add "None" to each filter bar
each filter bar will be cleared if click on "None"

* move “Filter" into "/search"

* Resolved conflicts

* impove buttons

* add Filter into an AppBar and change the styles

* format Filter

* format serach

* Feat/analyser api client (#91)

* set up analyser API Client

* created stocks table

* fix linting

* delete some tests

* delete all tests

* mock data a

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -157,10 +157,25 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
+  "analyser.details.analystsHeader": "2.4 Analysts",
+  "analyser.details.analysts.target": "Analysts Target Price:",
+  "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
+  "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
+  "analyser.details.BalanceSheet.Assets": "Assets",
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
+  "analyser.details.RiskHeader": "3. Risks",
+  "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
+  "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
+  "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
+  "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
+  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
+  "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
+  "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
+  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
