Modify colors to palette colors, add preliminary text to component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,9 @@
   "portfolio.details.divYield": "Dividend Yield",
   "portfolio.details.payout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
+  "portfolio.details.volatility": "Portfolio Volatility",
+  "portfolio.details.volatilityMarket": "Portfolio Volatility vs. Market",
+  "portfolio.details.volatilityText": "Portfolio Beta / Volatility",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
