*"deleted" DetailsMainRisk.tsx for the time being, rework on the way *fixing other components that were affected by changing the types / mocks in APIClient.ts and APIMocks.ts *finished DebtEquity component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,9 @@
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
+  "portfolio.details.analytics.debtEquity": "Debt Equity",
+  "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
+  "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
