--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,9 +40,6 @@
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
-  "portfolio.details.analytics.debtEquity": "Debt Equity",
-  "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
-  "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
@@ -74,18 +71,16 @@
   "shell.confirm": "Confirm your email-address",
   "shell.confirmPassword": "Confirm your password",
   "shell.message.forgotPassword": "Forgot password?",
-  "shell.message.noAccount": "You have no account? Then register <0>hier</0>",
-  "shell.question.haveAccount": "You already have an account? Then log in <0>hier</0>",
-  "shell.message.haveAccount": "<typography>You already have an account.<box></typography><button>Go to Login</button></box>",
+  "shell.message.noAccount": "You have no account? Then register ",
+  "shell.question.haveAccount": "You already have an account? Then log in ",
+  "shell.message.haveAccount": "You already have an account. To log in please click ",
   "shell.question.confirmationEmail": "You do not find the confirmation email? Please also check your spam folder!",
-  "shell.message.confirmationEmail": "We sent you an email with a confirmation link.<break/>Please confirm your email-address by clicking on the link.",
+  "shell.message.confirmationEmail": "You were send an confirmation email. Please copy the code into the textfield below.",
   "shell.message.resendEmail": "The confirmation email was re-send.",
   "shell.message.resend": "To re-sent the email click ",
   "error.invalidEmail": "Invalid email address.",
   "error.invalidPassword": "Invalid password.",
   "error.invalidEmailOrPassword": "The given email-address or password were not correct.",
-  "error.invalidPage": "This page could not be found.",
-  "error.action.home": "Go to home",
   "error.passwordRequirement.length": "Your password should at least be 8 characters long.",
   "error.passwordRequirement.lowerCase": "Your password should contain at least one lower-case letter.",
   "error.passwordRequirement.upperCase": "Your password should contain at least one upper-case letter.",
@@ -93,8 +88,8 @@
   "error.passwordRequirement.specialCharacter": "Your password should contain at least one special character.",
   "error.confirmPassword": "The password and its confirmation must be equal.",
   "error.incompleteForm": "Please fill in the form completely!",
-  "error.invalidToken": "This confirmation code is expired.<break/>Please register again.",
   "error.retry": "Please try again!",
+  "shell.link": "here",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
   "portfolio.dashboard.errorMessage": "There has been an error while loading your portfolios.",
