Revert "Revert "resolving merge conflicts""
This reverts commit 870b1737d1ca5319884e736ebaa3d2cf27d36d84.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,12 +34,6 @@
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
-  "portfolio.details.analytics": "Analytics",
-  "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
-  "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
-  "portfolio.details.analytics.correlations.negative": "Negative correlation",
-  "portfolio.details.analytics.correlations.positive": "Positive correlation",
-  "portfolio.details.analytics.correlations.noData": "No Data",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
@@ -96,7 +90,6 @@
   "portfolio.dashboard.view.table": "Table view",
   "portfolio.dashboard.view.cards": "Cards view",
   "portfolio.dashboard.createPortfolio": "Create New Portfolio",
-  "portfolio.dashboard.importPortfolio": "Import Portfolio",
   "portfolio.dashboard.noPortfolios": "You don't have any portfolios. To get started, create a new virtual portfolio or import an existing portfolio.",
   "portfolio.score": "Score",
   "portfolio.name": "Name",
@@ -157,25 +150,10 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
-  "analyser.details.analystsHeader": "2.4 Analysts",
-  "analyser.details.analysts.target": "Analysts Target Price:",
-  "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
-  "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
-  "analyser.details.BalanceSheet.Assets": "Assets",
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
-  "analyser.details.RiskHeader": "3. Risks",
-  "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
-  "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
-  "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
-  "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
-  "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
-  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
-  "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
-  "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
-  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
@@ -222,6 +200,5 @@
   "shell.profile.account-details.delete-dialog.title": "Are you sure you want to delete your account?",
   "shell.profile.account-details.delete-dialog.description": "Deleting your account is irreversible. All your data will be deleted!",
   "shell.profile.account-details.delete-dialog.ok": "OK",
-  "shell.profile.account-details.delete-dialog.cancel": "Cancel",
-  "shell.profile.account-details.add-bankconnection": "Add bank connection"
+  "shell.profile.account-details.delete-dialog.cancel": "Cancel"
 }
