--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,6 +127,8 @@
   "portfolio.dialog.delete.title": "Delete Portfolio",
   "portfolio.dialog.delete.text": "You are about to delete the portfolio <portfolioName>{{name}}</portfolioName>. This action cannot be undone.",
   "error.message.default": "An error has occurred.",
+  "error.title.AUTH_USER_NOT_LOGGED_IN": "Not logged in",
+  "error.message.AUTH_USER_NOT_LOGGED_IN": "You are currently not logged in. Please log in or create an account.",
   "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
   "error.message.AUTH_TOKEN_INVALID": "Your authentication token is invalid. Please log in again.",
   "error.title.AUTH_TOKEN_EXPIRED": "Login expired",
