--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,9 +30,8 @@
   "portfolio.details.divYield": "Dividend Yield",
   "portfolio.details.payout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
-  "portfolio.details.volatility": "Portfolio Volatility",
-  "portfolio.details.volatilityMarket": "Portfolio Volatility vs. Market",
-  "portfolio.details.volatilityText": "Portfolio Beta / Volatility",
+  "portfolio.details.analytics.volatility.vsMarket": "Portfolio Volatility vs. Market",
+  "portfolio.details.analytics.volatility.total": "Portfolio Beta / Volatility of the entire portfolio:",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
