fix faulty merge

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,9 @@
   "shell.confirm": "Confirm your email-address",
   "shell.confirmPassword": "Confirm your password",
   "shell.message.forgotPassword": "Forgot password?",
+  "shell.forgotPassword.reset": "Please enter your email so we can send you a reset link",
+  "shell.forgotPassword.submit": "Send link",
+  "shell.forgotPassword.tokenSent": "Please click on the link that we send to your email",
   "shell.message.noAccount": "You have no account? Then register <0>hier</0>",
   "shell.question.haveAccount": "You already have an account? Then log in <0>hier</0>",
   "shell.message.haveAccount": "<typography>You already have an account.<box></typography><button>Go to Login</button></box>",
