Added treynor ratio

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,6 +17,13 @@
   "portfolio.details.holding": "Holding",
   "portfolio.details.perShare": "Per share",
   "portfolio.details.sharpe": "Sharpe Ratio: ",
+  "portfolio.details.treynor": "Treynor Ratio: ",
+  "portfolio.details.warnings.country0": "Very low country diversification",
+  "portfolio.details.warnings.country1": "Low country diversification",
+  "portfolio.details.warnings.industry0": "Very low industry diversification",
+  "portfolio.details.warnings.industry1": "Low industry diversification",
+  "portfolio.details.warnings.currency0": "Very low currency diversification",
+  "portfolio.details.warnings.currency1": "Low currency diversification",
   "portfolio.details.positions": "Positions",
   "portfolio.details.countries": "Countries",
   "portfolio.details.industries": "Industries",
