Implemented thresholds and warnings. Massive refactoring.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,13 +20,13 @@
   "portfolio.details.treynor": "Treynor Ratio: ",
   "portfolio.details.warnings.country0": "Very low country diversification",
   "portfolio.details.warnings.country1": "Low country diversification",
-  "portfolio.details.warnings.industry0": "Very low industry diversification",
-  "portfolio.details.warnings.industry1": "Low industry diversification",
+  "portfolio.details.warnings.segment0": "Very low segment diversification",
+  "portfolio.details.warnings.segment1": "Low segment diversification",
   "portfolio.details.warnings.currency0": "Very low currency diversification",
   "portfolio.details.warnings.currency1": "Low currency diversification",
   "portfolio.details.positions": "Positions",
   "portfolio.details.countries": "Countries",
-  "portfolio.details.industries": "Industries",
+  "portfolio.details.segments": "Segments",
   "portfolio.details.currencies": "Currencies",
   "portfolio.details.positionsTitle": "Positions",
   "portfolio.details.viewMore": "view more",
