--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,6 +33,7 @@
   "portfolio.details.analytics.volatility.vsMarket": "Portfolio Volatility vs. Market",
   "portfolio.details.analytics.volatility.total": "Portfolio Beta / Volatility of the entire portfolio:",
   "portfolio.details.analytics.volatility.marketAvg": "Market Average",
+  "portfolio.details.analytics.volatility.myPortfolio": "My Portfolio",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
