Fix/portfolio dividends line chart (#245)
* Make DividendLineChart more customizable. Use DividendLineChart in portfolio details.

* Ratio donut now assumes input is between 0 and 100.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,7 +34,7 @@
   "portfolio.details.keyfigures": "Key Figures",
   "portfolio.details.dividends": "Dividends",
   "portfolio.details.divYield": "Dividend Yield",
-  "portfolio.details.payout": "Dividend Payout Ratio",
+  "portfolio.details.divPayout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
