Change the infotip text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -169,9 +169,12 @@
   "analyser.details.DividendsHeader": "2.2 Dividends",
   "analyser.details.analystsHeader": "2.4 Analysts",
   "analyser.details.analysts.target": "Analysts Target Price:",
+  "analyser.details.analysts.target.infoButton": "A price target is an analyst's projection of a security's future price, one at which an analyst believes a stock is fairly valued.",
   "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
   "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
+  "analyser.details.BalanceSheet.Liabilities.infoButton": "Both liabilities and shareholders' equity represent how the assets of a company are financed. Financing through debt shows as a liability, while financing through issuing equity shares appears in shareholders' equity.",
   "analyser.details.BalanceSheet.Assets": "Assets",
+  "analyser.details.BalanceSheet.Assets.infoButton": "An asset is something containing economic value and/or future benefit. It can often generate cash flows in the future, such as a piece of machinery, a financial security, or a patent.",
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
