replace static strings with i18 localizations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,6 +78,7 @@
   "portfolio.details.backtesting.sharpeRatioDescription": "This is a placeholder description for sharpeRatio(translation key)",
   "portfolio.details.backtesting.cagrDescription": "This is a placeholder description for cagr (translation key)",
   "cancel": "Cancel",
+  "submit": "Submit",
   "shell.email": "Email",
   "shell.password": "Password",
   "shell.login": "Login",
@@ -91,6 +92,8 @@
   "shell.reset.forgot": "Please enter your email so we can send you a reset link",
   "shell.reset.submit": "Send link",
   "shell.reset.tokenSent": "Please click on the link that we send to your email",
+  "shell.resetChange.enterPassword": "Please enter your new password",
+  "shell.resetChange.success": "Successfully changed your password",
   "shell.message.haveAccount": "<typography>You already have an account.<box></typography><button>Go to Login</button></box>",
   "shell.question.confirmationEmail": "You do not find the confirmation email? Please also check your spam folder!",
   "shell.message.confirmationEmail": "<typography>We sent you an email with a confirmation link.<break/>This could take a few minutes.<break/>Please confirm your email-address by clicking on the link.</typography>",
