--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
   "portfolio.details.discardChanges": "Discard changes",
   "portfolio.details.saveChanges": "Save changes",
   "portfolio.details.score": "Score",
+  "portfolio.details.scoreTooltip": "This is the score of your portfolio between 0 and 100. It is comprised of how much analysts believe these stock should be sold, held or bought.",
   "portfolio.details.day7": "7 Day",
   "portfolio.details.year": "1 Year",
   "portfolio.details.totalValue": "Total Value",
