add info tips for Volatility with information. add info tips for Leverage.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -192,13 +192,19 @@
   "analyser.details.NextDate": "Next Date:",
   "analyser.details.RiskHeader": "3. Risks",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
+  "analyser.details.Volatility.BetaFactor.infoButton": "Beta measures the expected move in a stock relative to movements in the overall market. A beta greater than 1.0 suggests that the stock is more volatile than the broader market, and a beta less than 1.0 indicates a stock with lower volatility.",
   "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.Volatility.SharpeRatio.infoButton": "The Sharpe ratio adjusts a portfolio’s past performance—or expected future performance—for the excess risk that was taken by the investor. A high Sharpe ratio is good when compared to similar portfolios or funds with lower returns.",
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
+  "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
   "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
   "analyser.details.Leverage.DebtLevel": "Debt Level: ",
+  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Level information",
   "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
+  "analyser.details.Leverage.DebtCoverage.infoButton": "Debt Coverage by operating cash flow information",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
+  "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
   "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
