--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,22 +186,31 @@
   "analyser.details.DividendsHeader": "2.2 Dividends",
   "analyser.details.analystsHeader": "2.4 Analysts",
   "analyser.details.analysts.target": "Analysts Target Price:",
+  "analyser.details.analysts.target.infoButton": "A price target is an analyst's projection of a security's future price, one at which an analyst believes a stock is fairly valued.",
   "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
   "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
+  "analyser.details.BalanceSheet.Liabilities.infoButton": "Both liabilities and shareholders' equity represent how the assets of a company are financed. Financing through debt shows as a liability, while financing through issuing equity shares appears in shareholders' equity.",
   "analyser.details.BalanceSheet.Assets": "Assets",
+  "analyser.details.BalanceSheet.Assets.infoButton": "An asset is something containing economic value and/or future benefit. It can often generate cash flows in the future, such as a piece of machinery, a financial security, or a patent.",
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
   "analyser.details.RiskHeader": "3. Risks",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
+  "analyser.details.Volatility.BetaFactor.infoButton": "Beta measures the expected move in a stock relative to movements in the overall market. A beta greater than 1.0 suggests that the stock is more volatile than the broader market, and a beta less than 1.0 indicates a stock with lower volatility.",
   "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.Volatility.SharpeRatio.infoButton": "The Sharpe ratio adjusts a portfolio’s past performance—or expected future performance—for the excess risk that was taken by the investor. A high Sharpe ratio is good when compared to similar portfolios or funds with lower returns.",
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
+  "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
   "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
   "analyser.details.Leverage.DebtLevel": "Debt Level: ",
+  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Level information",
   "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
+  "analyser.details.Leverage.DebtCoverage.infoButton": "Debt Coverage by operating cash flow information",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
+  "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
   "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
@@ -224,6 +233,7 @@
   "stock.fullTimeEmployees": "Number of Employees",
   "stock.address": "Address",
   "stock.assembly": "Next Shareholder's Assembly",
+  "stock.50dayMovingAverage": "50 Days Moving Average",
   "analyser.detail.keyfigure.PER.title": "Price to Earnings Ratio",
   "analyser.detail.keyfigure.PER.definition": "The P/E ratio relates a company's share price to its earnings per share. A high P/E ratio could mean that a company's stock is over-valued, or else that investors are expecting high growth rates in the future.",
   "analyser.detail.keyfigure.PBR.title": "Price to Book Ratio",
@@ -256,5 +266,9 @@
   "shell.profile.account-details.add-bankconnection": "Add bank connection",
   "company.website": "Website",
   "company.mc": "Market Capitalization",
-  "company.exchange": "Exchange"
+  "company.exchange": "Exchange",
+  "company.sharesFloat": "Shares Float",
+  "info.mc": "The total money invested in the company from all sharesholder",
+  "info.50dayMovingAverage": "Moving average of the stock price in the last 50 days",
+  "info.sharesFloat": "The number of shares currently circulating on the market"
 }
