Fix/overall visuals (#268)
* added meaningful series label to StockChart.tsx
* show total value more prominently
* added numbers to title
* changed heatmap colors in order to not confuse the user ("red bad green good")
* fixed wrong moment version that caused white screen on date change and formatting problems
* changed color in DetailsVolatilityGraph.tsx

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,8 @@
   "portfolio": "Portfolio",
   "portfolio.details.editPortfolio": "Edit Portfolio",
   "portfolio.details.cannotEditPortfolio": "Cannot edit real portfolio",
-  "portfolio.details.summaryHeader": "Summary",
+  "portfolio.details.summaryHeader": "1. Summary",
+  "portfolio.details.stockChartSeries": "Total Performance",
   "portfolio.dialog.edit.title": "Edit portfolio positions",
   "portfolio.dialog.edit.text": "Here you can adjust the positions of your portfolio.",
   "portfolio.details.stock": "Stock",
@@ -30,11 +31,11 @@
   "portfolio.details.countries": "Countries",
   "portfolio.details.segments": "Segments",
   "portfolio.details.currencies": "Currencies",
-  "portfolio.details.positionsTitle": "Positions",
+  "portfolio.details.positionsTitle": "2. Positions",
   "portfolio.details.viewMore": "view more",
-  "portfolio.details.risk": "Risk Analysis",
-  "portfolio.details.keyfigures": "Key Figures",
-  "portfolio.details.dividends": "Dividends",
+  "portfolio.details.risk": "3. Risk Analysis",
+  "portfolio.details.keyfigures": "4. Key Figures",
+  "portfolio.details.dividends": "5. Dividends",
   "portfolio.details.divYield": "Dividend Yield",
   "portfolio.details.divPayout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
@@ -45,9 +46,9 @@
   "portfolio.details.analytics.volatility.myPortfolio": "My Portfolio",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
-  "portfolio.details.analyst": "Analysts",
+  "portfolio.details.analyst": "6. Analysts",
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
-  "portfolio.details.analytics": "Analytics",
+  "portfolio.details.analytics": "7. Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
@@ -58,7 +59,7 @@
   "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
-  "portfolio.details.backtesting": "Backtesting",
+  "portfolio.details.backtesting": "8. Backtesting",
   "portfolio.details.backtesting.start": "Start value",
   "portfolio.details.backtesting.min": "Min value",
   "portfolio.details.backtesting.max": "Max value",
