added info boxes for analytics section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,11 +50,13 @@
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
   "portfolio.details.analytics": "7. Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
+  "portfolio.details.analytics.standardDeviation.infoButton": "A standard deviation is a statistic that measures the dispersion of a dataset relative to its mean. The greater the standard deviation of securities, the greater the variance between each price and the mean, which shows a larger price range",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
   "portfolio.details.analytics.debtEquity": "Debt Equity",
+  "portfolio.details.analytics.debtEquity.infoButton": "The debt-to-equity (D/E) ratio is used to evaluate a company's financial leverage and is calculated by dividing a company’s total liabilities by its shareholder equity.",
   "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
   "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
