added info boxes for backtesting

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,12 +76,10 @@
   "portfolio.details.backtesting.dateHelperText": "Please select a valid time span and try again.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
   "portfolio.details.backtesting.updateButton": "Update",
-  "portfolio.details.backtesting.bestChangeDescription": "This is a placeholder description for bestChange (translation key)",
-  "portfolio.details.backtesting.worstChangeDescription": "This is a placeholder description for worstChange (translation key)",
-  "portfolio.details.backtesting.mddDescription": "This is a placeholder description for mdd (translation key)",
-  "portfolio.details.backtesting.standardDeviationDescription": "This is a placeholder description for standardDeviation (translation key)",
-  "portfolio.details.backtesting.sharpeRatioDescription": "This is a placeholder description for sharpeRatio(translation key)",
-  "portfolio.details.backtesting.cagrDescription": "This is a placeholder description for cagr (translation key)",
+  "portfolio.details.backtesting.bestChangeInfo": "This was the best annual change over the selected period.",
+  "portfolio.details.backtesting.worstChangeInfo": "This was the worst annual change over the selected period.",
+  "portfolio.details.backtesting.mddInfo": "A maximum drawdown (MDD) is the maximum observed loss from a peak to a trough of a portfolio, before a new peak is attained. Maximum drawdown is an indicator of downside risk over a specified time period.",
+  "portfolio.details.backtesting.cagrInfo": "Compound annual growth rate (CAGR) is the rate of return that would be required for an investment to grow from its beginning balance to its ending balance, assuming the profits were reinvested at the end of each year of the investment’s lifespan.",
   "cancel": "Cancel",
   "submit": "Submit",
   "shell.email": "Email",
