--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,10 +51,12 @@
   "portfolio.details.analytics": "7. Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
   "portfolio.details.analytics.standardDeviation.infoButton": "A standard deviation is a statistic that measures the dispersion of a dataset relative to its mean. The greater the standard deviation of securities, the greater the variance between each price and the mean, which shows a larger price range",
+  "portfolio.details.analytics.correlation": "Correlation",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
+  "portfolio.details.analytics.correlations.info": "Correlation, in the finance and investment industries, is a statistic that measures the degree to which two securities move in relation to each other. The correlation coefficient's values range between -1.0 and 1.0. A perfect positive correlation means that the correlation coefficient is exactly 1. This implies that as one security moves, either up or down, the other security moves in lockstep, in the same direction. A perfect negative correlation means that two assets move in opposite directions, while a zero correlation implies no linear relationship at all.",
   "portfolio.details.analytics.debtEquity": "Debt Equity",
   "portfolio.details.analytics.debtEquity.infoButton": "The debt-to-equity (D/E) ratio is used to evaluate a company's financial leverage and is calculated by dividing a company’s total liabilities by its shareholder equity.",
   "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
